<resources>
    <string name="app_name">Mygram</string>
    <string name="menu_item1">Создать группу</string>
    <string name="menu_item2">Создать секретный чат</string>
    <string name="menu_item3">Создать канал</string>
    <string name="menu_item4">Контакты</string>
    <string name="menu_item5">Звонки</string>
    <string name="menu_item6">Избранное</string>
    <string name="menu_item7">Настройки</string>
    <string name="menu_item8">Пригласить друзей</string>
    <string name="menu_item9">Вопросы о Mygram</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_text_account">Аккаунт</string>
    <string name="settings_label_phone_number">Нажмите, чтобы изменить номер телефона</string>
    <string name="settings_label_username">Имя пользователя</string>
    <string name="settings_label_about">Напишите немного о себе</string>
    <string name="settings_menu_change_name">Изменить имя</string>
    <string name="settings_menu_exit">Выход</string>
    <string name="cd_register_image">register_image</string>
    <string name="register_text_enter_code">Введите код</string>
    <string name="register_text_we_sent">Мы отправили вам SMS с кодом проверки на ваш телефон</string>
    <string name="register_hint_default_code">- - - - - -</string>
    <string name="register_title_your_phone">Ваш телефон</string>
    <string name="register_toast_enter_phone">Введите номер телефона</string>
    <string name="register_welcome">Добро пожаловать</string>
    <string name="settings_hint_input_name">Имя</string>
    <string name="settings_hint_input_surname">Фамилия</string>
    <string name="settings_toast_name_is_empty">Имя не может быть пустым!</string>
    <string name="toast_data_update">Данные обновлены</string>
    <string name="settings_hint_username">Username</string>
    <string name="settings_toast_username_exists">Такой пользователь уже существует</string>
    <string name="settings_hint_bio">Расскажите здесь о себе</string>
    <string name="title_contacts">Контакты</string>
    <string name="message_hint">Сообщение</string>
    <string name="clear_char">Очистить чат</string>
    <string name="delete_chat">Удалить чат</string>
    <string name="chat_deleted">Чат удален</string>
    <string name="add_contacts_title">Добавить участников</string>
    <string name="create_group_title">Создать группу</string>
    <string name="add_contact_toast_empty_list">Добавьте участников!</string>
    <string name="toast_input_name_group">Введите название группы!</string>
    <plurals name="count_members">
        <item quantity="one">%d участник</item>
        <item quantity="few">%d участника</item>
        <item quantity="many">%d участников</item>
        <item quantity="other">%d участников</item>
    </plurals>
</resources>
